--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -7,7 +7,7 @@
       <div class="row">
           <div class="row seven-cols">
           <div class="col-md-2  wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-              <div class="member"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1559454811/team-1.jpg" class="img-fluid" alt="">
+              <div class="member"> <img src="/assets/prasanth.jpg" class="img-fluid" alt="">
                    <div class="member-info">
                       <div class="member-info-content">
                         <h4>Prasanth Reddy</h4> <span>Chief Executive Officer</span>
