--- a/src/app/civil/civil.component.html
+++ b/src/app/civil/civil.component.html
@@ -41,7 +41,7 @@ pontoon to cross the river Rhine. The construction of a floating bridge without 
 very difficult, and it needs to be done quickly and accurately.</p>
  </div>
  <div class="col-sm-5">
-     <img src="https://www.cuchd.in/uie/images/civil-dept-img.jpg" width="700px" height="400px" alt=""><br><br>
-     <img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Viaduct_in_Puxi%2C_Shanghai.jpg" width="700px" height="400px" alt="">
+     <img class="img-fluid-md" src="https://www.cuchd.in/uie/images/civil-dept-img.jpg" width="700px" height="400px" alt=""><br><br>
+     <img class="img-fluid-md" src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Viaduct_in_Puxi%2C_Shanghai.jpg" width="700px" height="400px" alt="">
  </div>
 </div>
