--- a/src/app/cse/cse.component.html
+++ b/src/app/cse/cse.component.html
@@ -38,8 +38,8 @@ limited specializations, and different students may follow different paths and t
 courses in it.</p>
     </div>
     <div class="col-sm-5">
-        <img src="https://www.icriindia.com/uploads/page/single-image/aa0391ef9b1560766394.jpg" alt=""><br><br>
-        <img src="https://topindinews.com/wp-content/uploads/2019/06/cindiafotoai_759_gettyimages-949318592-1.jpg" alt="">
+        <img class="img-fluid-md" src="https://www.icriindia.com/uploads/page/single-image/aa0391ef9b1560766394.jpg" alt=""><br><br>
+        <img class="img-fluid-md" src="https://topindinews.com/wp-content/uploads/2019/06/cindiafotoai_759_gettyimages-949318592-1.jpg" alt="">
     </div>
 
 </div>
