--- a/src/app/ece/ece.component.html
+++ b/src/app/ece/ece.component.html
@@ -35,6 +35,6 @@ how to program such devices to develop simple applications. First half of this c
 
     </div>
     <div class="col-sm-4">
-        <img src="https://uploads.sarvgyan.com/2014/06/electronics-communication-engineering-image.jpg" alt="">
+        <img class="img-fluid-md" src="https://uploads.sarvgyan.com/2014/06/electronics-communication-engineering-image.jpg" alt="">
     </div>
 </div>
