--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
-<div id="demo" class="carousel slide" data-ride="carousel">
+<!-- <div id="demo" class="carousel slide" data-ride="carousel">
 
-    <!-- Indicators -->
+    Indicators 
     <ul class="carousel-indicators">
       <li data-target="#demo" data-slide-to="0" class="active"></li>
       <li data-target="#demo" data-slide-to="1"></li>
       <li data-target="#demo" data-slide-to="2"></li>
     </ul>
   
-    <!-- The slideshow -->
+    The slideshow 
     <div class="carousel-inner">
       <div class="carousel-item active">
        
@@ -25,12 +25,33 @@
       </div>
     </div>
   
-    <!-- Left and right controls -->
+     Left and right controls 
     <a class="carousel-control-prev" href="#demo" data-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </a>
     <a class="carousel-control-next" href="#demo" data-slide="next">
       <span class="carousel-control-next-icon"></span>
+    </a>
+  </div> -->
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <div class="img"><img class="img-fluid-md" width="100%"height="500px" src="\assets\lab2.jpeg" alt="First slide"></div>
+      </div>
+      <div class="carousel-item">
+        <div class="img"><img class="img-fluid-md" width="100%"height="500px" src="https://www.arup.com/-/media/arup/images/expertise/industries/education-university-nottingham-engineering-science-library-mhk-photography-2000x1125.jpg?h=1125&w=2000&hash=3C31F273DC5D960288529B5132821B12" alt="Second slide"></div>
+      </div>
+      <div class="carousel-item">
+        <div class="img"><img class="img-fluid-md" width="100%"height="500px" src="https://images.wallpaperscraft.com/image/books_library_shelves_138556_3840x2400.jpg" alt="Third slide"></div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
     </a>
   </div>
 
@@ -56,7 +77,7 @@
   <div style="font-size: 16px; padding: 6px 0px; width:90%; color:#fff; background-color: green; ">
 <marquee scrollamount="3" scrolldelay="1" onmouseover="this.stop()" onmouseout="this.start()" direction="left">
       <ul>						  <li style="display: inline-block; color: #fff;">
-&nbsp;&nbsp;&nbsp;<span style="color:#fff; font-weight: bold;"></span>&nbsp;<span></span>&nbsp;&nbsp;<a style="color: #fff; font-weight: bold; text-decoration: none; font-size: 15px; line-height: 14px;" href="https://www.jntua.ac.in/postponement-of-three-day-national-workshop-on-research-and-publication-ethics-scheduled-during-20-22-feb-2020-reg/">Postponement of Three-Day National Workshop on “Research and Publication Ethics” scheduled during 20-22 Feb 2020 – Reg.&nbsp;&nbsp;<img src="https://jntua.ac.in/wp-content/uploads/2018/08/new.gif" style="vertical-align: baseline;"></a>
+&nbsp;&nbsp;&nbsp;<span style="color:#fff; font-weight: bold;"></span>&nbsp;<span></span>&nbsp;&nbsp;<a style="color: #fff; font-weight: bold; text-decoration: none; font-size: 15px; line-height: 14px;" href="https://www.jntua.ac.in/postponement-of-three-day-national-workshop-on-research-and-publication-ethics-scheduled-during-20-22-feb-2020-reg/">Postponement of Three-Day National Workshop on “Research and Publication Ethics” scheduled during 20-22 may 2020 – Reg.&nbsp;&nbsp;<img src="https://jntua.ac.in/wp-content/uploads/2018/08/new.gif" style="vertical-align: baseline;"></a>
 </li>		      
              
 </ul>                    </marquee>
@@ -90,36 +111,38 @@
    
    
 <div class="container-fluid" style="margin-top: auto;"> 
+
       <!--<h6 class="display-4 text-center">PLACEMENTS</h6> -->
      
-      <div class="box">
-       <p class="text-white text-center">380+</p>  <br>
+      <div class="box" style="background-image: url( https://www.socialtalent.com/wp-content/uploads/2016/12/blur-1867166_640.jpg);">
+       <p class="text-white text-center">380+</p><br>
        <p class="text-white text-center">Recruiters</p> 
 
        
       </div>
-      <div class="box1" style="background-color:gray;"> 
+      <div class="box1" style="background-image: url(https://stjosephs.ac.in/images/singlepage_images/placement2.jpg);"> 
         <p class="text-white text-center">90% </p><br>
         <p  class="text-white text-center">Students Placed</p>
       </div>
-      <div class="box2">
+      <div class="box2" style="background-image: url(https://adoptoprod.blob.core.windows.net/article/5Jads9Re50KN7DVzL4gaFA.png?6883);">
         <p class="text-white text-center">40%</p> <br>
        <p class="text-white text-center"> New Recruiters</p>
       </div>
-      <div class="box3" style=" background-image: url(https://s3-ap-southeast-1.amazonaws.com/images.humanresourcesonline.net/wp-content/uploads/2016/11/Jerene-Nov-2016-pay-increase-123RF-700x420.jpg);width: 150px;height:350px;">
+      <div class="box3" style="background-image: url(https://s3-ap-southeast-1.amazonaws.com/images.humanresourcesonline.net/wp-content/uploads/2016/11/Jerene-Nov-2016-pay-increase-123RF-700x420.jpg);">
        <p class="text-white text-center">25%</p>  <br>
        <p class="text-white text-center">Increase in Salary</p> 
       </div>
-      <div class="box4">
+      <div class="box4" style="background-image: url(https://cdn.thegentlemansjournal.com/wp-content/uploads/2015/02/google-highest-paid-jobs-3-624x692-c-center.jpg);" >
         <p class="text-white text-center">22.6</p> <br>
          <p class="text-white text-center">LPA </p><br>
           <p class="text-white text-center">Highest Salary</p>
       </div>
-      <div class="box5">
+      <div class="box5" style=" background-image: url(https://www.insuremypath.org/sites/default/files/styles/490x350/public/2019-08/starting-salary-648x364-c-default.jpg?itok=6rkKoqdB);">
        <p class="text-center text-white"> 5</p> <br>
        <p class="text-center text-white"> LPA</p> <br>
        <p class="text-center text-white">Average Salary</p> 
       </div>
+    
     </div>
     
 
