--- a/src/app/mechanical/mechanical.component.html
+++ b/src/app/mechanical/mechanical.component.html
@@ -38,7 +38,7 @@
         </p>
     </div>
     <div class="col-sm-4">
-        <img src="https://www.thewedesign.co.uk/blog/image/image1%20(8).jpg" alt="" height="350px" width="500px">
+        <img class="img-fluid-md" src="https://www.thewedesign.co.uk/blog/image/image1%20(8).jpg" alt="" height="350px" width="500px">
     </div>
 
 </div>
