--- a/src/app/admin/marks/marks.component.html
+++ b/src/app/admin/marks/marks.component.html
@@ -70,7 +70,7 @@
     </div>
     </div>
     </div>
-
+      <div class="table-responsive">
       <table class="table table-hover">
    
       <thead>
@@ -95,5 +95,6 @@
           <td>{{k.total}}</td>
       </tr>
     </tbody>
+
   </table>
-  
+  </div>
