--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -13,10 +13,12 @@
     /* background: #ddd; */
 
 }
-.box{
+.box
+{
     height: 300px;
     padding: 25px;
-    background-image: url(  https://www.socialtalent.com/wp-content/uploads/2016/12/blur-1867166_640.jpg);
+    
+    /* background-image: url(  https://www.socialtalent.com/wp-content/uploads/2016/12/blur-1867166_640.jpg); */
     height: 350px;
     width: 200px;
     /* background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%); */
@@ -28,7 +30,8 @@
 .box1{
     height: 350px;
     padding: 25px;
-   background-image: url(https://lh3.googleusercontent.com/proxy/IcM422QjYe1OrKX5HYM_aM23G8E2KJVCwZAn07BnZXvuskxbPM4JCbm_LbY-GmmQfzS3J5nsz0VSFSYM0LcqKFCrMP5xmkso1pkVOyIU_DL6hdpedpcNXLg_njfkdQVb_AmeiKrwj0EkCIXkHSOj0bjXNFk);
+  
+    /* background-image: url(https://stjosephs.ac.in/images/singlepage_images/placement2.jpg); */
     /* background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%); */
     border: 3px solid #ddd;
     font-size: 30px;
@@ -38,7 +41,8 @@
 .box2{
     height: 350px;
     padding: 25px;
-    background-image: url(https://adoptoprod.blob.core.windows.net/article/5Jads9Re50KN7DVzL4gaFA.png?6883);
+
+    /* background-image: url(https://adoptoprod.blob.core.windows.net/article/5Jads9Re50KN7DVzL4gaFA.png?6883); */
     /* background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%); */
     border: 3px solid #ddd;
     font-size: 30px;
@@ -51,7 +55,7 @@
     /* background-image: url(https://s3-ap-southeast-1.amazonaws.com/images.humanresourcesonline.net/wp-content/uploads/2016/11/Jerene-Nov-2016-pay-increase-123RF-700x420.jpg); */
     /* background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%); */
     /* width: 200px; */
-   
+    width: 200px;
     border: 3px solid #ddd;
     font-size: 30px;
     flex: 1;
@@ -60,7 +64,9 @@
 .box4{
     height: 350px;
     padding: 25px;
-   background-image: url(https://cdn.thegentlemansjournal.com/wp-content/uploads/2015/02/google-highest-paid-jobs-3-624x692-c-center.jpg);
+    
+    /* width: 100%;
+   background-image: url(https://cdn.thegentlemansjournal.com/wp-content/uploads/2015/02/google-highest-paid-jobs-3-624x692-c-center.jpg); */
     /* background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%); */
     background-repeat: no-repeat;
     border: 3px solid #ddd;
@@ -68,10 +74,11 @@
     flex: 1;
     transition: 3s;
 }
-.box5{
+ .box5{
     height: 350px;
     padding: 25px;
-    background-image: url(https://www.insuremypath.org/sites/default/files/styles/490x350/public/2019-08/starting-salary-648x364-c-default.jpg?itok=6rkKoqdB);
+    /* width: 100%;
+    background-image: url(https://www.insuremypath.org/sites/default/files/styles/490x350/public/2019-08/starting-salary-648x364-c-default.jpg?itok=6rkKoqdB); */
     /* background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%); */
     border: 3px solid #ddd;
     font-size: 30px;
@@ -109,3 +116,17 @@
 {
     font-family: 'coronetscript',cursive;
 }
+/* 
+@media (max-width:1200px)
+{
+    .container-fluid
+{
+  
+    width: 800px;
+    height: auto;
+    padding: 20px;
+    margin: 100px auto;
+    display: flex;
+    /* background: #ddd; */
+
+
