--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,10 +6,10 @@
    
 } */
 
-/* @import url('https://fonts.googleapis.com/css?family=Numans'); */
 
 
-.container-fluid{
+
+/* .container-fluid{
 background-image: url(https://images6.alphacoders.com/428/428734.jpg);
 background-size: cover;
 background-repeat: no-repeat;
@@ -18,6 +18,20 @@ width: 1700px;
 font-family: 'Numans', sans-serif;
 margin: 0;
 padding: 65px;
+height: 100%;
+align-content: center;
+} */
+@import url('https://fonts.googleapis.com/css?family=Numans');
+
+
+.container-fluid{
+background-image: url(https://images6.alphacoders.com/428/428734.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+height: 100%;
+width: 100%;
+font-family: 'Numans', sans-serif;
+
 height: 100%;
 align-content: center;
 }
@@ -45,7 +59,7 @@ cursor: pointer;
 color: white;
 }
 .card-body {
-    height:400px
+    height:300px
 }
 .card-footer h3{
     color:white
@@ -100,9 +114,4 @@ color: white;
 
 .links a{
 margin-left: 4px;
-}
-
-.h3
-{
-    font-family:cursive;
 }
